<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_s"/>

        <EditText
            android:id="@+id/et_venue_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/venue_id_hint"/>

        <EditText
            android:id="@+id/et_size"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/size_hint"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_marginBottom="200dp"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/company_name" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>